# osre

./: .clang-format  .gitignore  .gitmodules  .travis.sh  .travis.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  appveyor.yml  vcpkg.json
3dparty/glew/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake  glew.vcxproj  glew.vcxproj.filters
3dparty/lua-5.3.5/: CMakeLists.txt
3dparty/unzip/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Unzip.vcxproj  Unzip.vcxproj.filters  cmake_install.cmake  ioapi.c
contrib/soil/: CMakeLists.txt
samples/: CMakeLists.txt  readme.md
samples/00_HelloWorld/: HelloWorld.cpp  README.md
samples/01_ModelLoading/: ModelLoading.cpp  README.md
samples/02_Demo2D/: Demo2D.cpp  README.md
samples/02_UIDemo/: README.md  UIDemo.cpp
samples/03_Instancing/: Instancing.cpp  README.md
samples/04_terrain/: .TerrainRendering.cpp.un~  README.md  TerrainRendering.cpp
samples/05_Animation/: Animation.cpp  README.md
samples/06_Widgets/: README.md  Widgets.cpp
samples/SamplesBase/: SamplesAppBase.cpp  SamplesAppBase.h
src/: CMakeLists.txt  ce2_infrastructure.vcxproj
src/App/: AppBase.cpp
src/Assets/: AssetRegistry.cpp
src/Common/: AbstractCodec.cpp  ArgumentParser.cpp  CodecRegistry.cpp  DateTime.cpp  Event.cpp  EventTriggerer.cpp  Ids.cpp  Logger.cpp  Object.cpp  Tokenizer.cpp
src/Debugging/: AssertHandler.cpp
src/Editor/: CMakeLists.txt  OSREEditor.sln  readme.md
src/Editor/Common/: EditorApp.cpp  EditorApp.h  main.cpp
src/Editor/OSREEditor/: MainEditorWindow.Designer.cs  MainEditorWindow.cs  MainEditorWindow.resx  OSREEditor.csproj  Program.cs
src/Editor/src/: OsreEdApp.cpp  OsreEdApp.h  ProgressReporter.cpp  ProgressReporter.h  SceneData.h  main.cpp
src/Editor_cpp/: CMakeLists.txt  OSRE_Ed.rc  resource.h
src/Editor_cpp/src/: OsreEdApp.cpp  OsreEdApp.h  ProgressReporter.cpp  ProgressReporter.h  SceneData.h  main.cpp
src/Editor_csharp/: CMakeLists.txt
src/Editor_csharp/OSREEditor/: MainEditorWindow.cs  Program.cs
src/Editor_imgui/: CMakeLists.txt
src/Editor_imgui/src/: OsreEdApp.cpp  OsreEdApp.h  ProgressReporter.cpp  ProgressReporter.h  SceneData.h  main.cpp
src/Engine/: CMakeLists.txt  UiItemFactory.cpp
src/Engine/Animation/: AnimatorBase.h  AnimatorComponent.cpp  AnimatorComponent.h
src/Engine/App/: AbstractBehaviour.h  App.h  AppBase.cpp  AppBase.h  AppCommon.h  AssetBundle.h  AssetDataArchive.cpp  AssetRegistry.cpp  AssetRegistry.h  AssimpWrapper.cpp  AssimpWrapper.h  Camera.cpp  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  Entity.cpp  Entity.h  GameObject.cpp  KeyboardEventListener.cpp  KeyboardEventListener.h  ModuleBase.cpp  MouseEventListener.cpp  MouseEventListener.h  Node.cpp  OrbitalMouseControl.cpp  OrbitalMouseControl.h  ParticleEmitter.cpp  ParticleEmitter.h  Project.cpp  Project.h  RenderComponent.cpp  RenderComponent.h  ResourceCacheService.h  Scene.cpp  Scene.h  SceneCommon.h  ServiceProvider.cpp  ServiceProvider.h  Stage.cpp  (+11 more)
src/Engine/Assets/: AssetData.cpp  AssetDataArchive.cpp  AssetRegistry.cpp  AssimpWrapper.cpp  Model.cpp
src/Engine/Collision/: GeometryProcessor.cpp
src/Engine/Common/: AbstractCodec.cpp  AbstractEventHandler.h  AbstractProcessor.h  AbstractService.h  ArgumentParser.cpp  ArgumentParser.h  BaseMath.cpp  BaseMath.h  CodecRegistry.cpp  ColorRGBA.h  CommandQueue.cpp  Common.cpp  DateTime.cpp  DateTime.h  Environment.cpp  Environment.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  EventTriggerer.cpp  EventTriggerer.h  Frustum.h  ITaskManager.cpp  Ids.cpp  Ids.h  Logger.cpp  Logger.h  Object.cpp  Object.h  StringUtils.h  TAABB.h  TFunctor.h  TObjPtr.h  TRay.h  TResource.h  TResourceCache.h  Tokenizer.cpp  Tokenizer.h  glm_common.h  (+1 more)
src/Engine/Debugging/: AssertHandler.cpp  AssertHandler.h  Debug.cpp  Debug.h  MeshDiagnostic.cpp  MeshDiagnostic.h  osre_debugging.h
src/Engine/IO/: AbstractFileSystem.h  Directory.cpp  Directory.h  File.cpp  File.h  FileStream.cpp  FileStream.h  IOCommon.h  IOService.cpp  IOService.h  IOSystemInfo.cpp  IOSystemInfo.h  ImageCodec.cpp  ImageCodec.h  LocaleFileSystem.cpp  LocaleFileSystem.h  MemoryStream.h  Stream.cpp  Stream.h  Uri.cpp  Uri.h  ZipFileStream.cpp  ZipFileStream.h  ZipFileSystem.cpp  ZipFileSystem.h
src/Engine/Math/: BaseMath.cpp
src/Engine/Modules/: IModuleView.h  ModuleBase.cpp  ModuleBase.h
src/Engine/Platform/: AbstractDisplayInterface.h  AbstractDynamicLoader.cpp  AbstractDynamicLoader.h  AbstractOGLRenderContext.h  AbstractOSService.h  AbstractPlatformEventQueue.cpp  AbstractPlatformEventQueue.h  AbstractSurface.cpp  AbstractSystemInfo.h  AbstractTimer.h  AbstractWindow.cpp  AbstractWindow.h  AtomicInt.cpp  CPUInfo.cpp  KeyTypes.h  PlatformCommon.h  PlatformInterface.cpp  (+11 more)
src/IO/: FileStream.cpp  FileStream.h  IOService.cpp  IOSystemInfo.cpp  LocaleFileSystem.cpp  LocaleFileSystem.h  Stream.cpp  Uri.cpp  ZipFileStream.cpp  ZipFileStream.h  ZipFileSystem.cpp  ZipFileSystem.h
src/Math/: BaseMath.cpp
src/Platform/: AbstractDynamicLoader.cpp  AbstractSurface.cpp  AtomicInt.cpp  CPUInfo.cpp  PlatformInterface.cpp  PlatformPluginFactory.cpp  PlatformPluginFactory.h  SystemInfo.cpp  SystemUtils.cpp
src/Player/: CMakeLists.txt  main.cpp
src/Profiling/: FPSCounter.cpp
src/Properties/: BasePropertyMap.cpp  ConfigurationMap.cpp  Property.cpp  Settings.cpp
src/RenderBackend/: DbgFontData.cpp  DbgTextRenderer.cpp  FontBase.cpp  Parameter.cpp  RenderBackendService.cpp  RenderCommon.cpp  TextRenderer.cpp
src/Scene/: Component.cpp  GeometryBuilder.cpp  MaterialBuilder.cpp  Node.cpp  Stage.cpp  TrackBall.cpp  View.cpp  World.cpp
src/Threading/: AbstractTask.cpp  AsyncTask.cpp  IThreadFactory.cpp  SystemTask.cpp  TaskGroup.cpp  TaskScheduler.cpp  ThreadPool.cpp  WorkerThread.cpp  WorkerThread.h
test/RenderTests/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ce2_rendertest.vcxproj  cmake_install.cmake  rendertest.vcxproj  rendertest.vcxproj.filters
test/UnitTests/: CMakeLists.txt
(+790 files in other folders)
