SET( lua_src
	src/lapi.h
	src/lauxlib.h
	src/lbitlib.c
	src/lcode.h
	src/lctype.c
	src/ldblib.c
	src/ldebug.h
	src/ldo.h
    src/lfunc.c
	src/lgc.c
	src/linit.c
	src/llex.c
	src/llimits.h
	src/lmem.c
	src/loadlib.c
	src/lobject.h
	src/lopcodes.h
	src/lparser.c
	src/lprefix.h
	src/lstate.h
	src/lstring.h 
	src/ltable.c
	src/ltablib.c
	src/ltm.h
	src/lua.h
    src/luac.c
	src/lualib.h
	src/lundump.h
	src/lvm.c
	src/lzio.c
	src/lapi.c
    src/lauxlib.c
	src/lbaselib.c
	src/lcode.c
    src/lcorolib.c
	src/lctype.h
	src/ldebug.c
	src/ldo.c
	src/ldump.c
	src/lfunc.h
	src/lgc.h 
	src/liolib.c
	src/llex.h
	src/lmathlib.c
	src/lmem.h
	src/lobject.c
	src/lopcodes.c
	src/loslib.c
    src/lparser.h
	src/lstate.c
	src/lstring.c 
	src/lstrlib.c 
	src/ltable.h
	src/ltm.c
	src/lua.c
	src/lua.hpp
	src/luaconf.h
	src/lundump.c
	src/lutf8lib.c
	src/lvm.h
	src/lzio.h
)

ADD_LIBRARY( lualib ${lua_src} )
target_link_libraries ( lualib )
set_target_properties(  lualib PROPERTIES FOLDER ThirdParty )
